--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "parcel -d . src/index.html --open",
-    "build": "rm app.* && parcel build -d . src/index.html --public-url '.' ",
+    "build": "parcel build -d . src/index.html --public-url '.' ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
